--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -19,10 +19,10 @@
 
   <ng-template pTemplate="end">
     <div style="display: flex; align-items: center; justify-content: center">
-      <app-toogle-theme class="mt-1"></app-toogle-theme>
+      <app-toogle-theme></app-toogle-theme>
       @if(userId){
       <div
-        style="cursor: pointer; border: none; font-size: 24px; color: red"
+        style="cursor: pointer; border: none; font-size: 24px; color: red; margin-top: 3px;"
         class="me-1"
         (click)="logout()"
       >
@@ -43,37 +43,7 @@
 
 <app-chatbot></app-chatbot>
 
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-  <div class="container-fluid">
-    <a class="navbar-brand">🎬 MovieVerse</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a routerLink="/movies" class="nav-link" routerLinkActive="active"
-            >Movies</a
-          >
-        </li>
-        <li class="nav-item">
-          <a routerLink="/tv-shows" class="nav-link" routerLinkActive="active"
-            >TV Shows</a
-          >
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav> -->
 
 <h1 style="text-align: center; padding: 20px" class="welcome">
   🎬 Welcome to the biggest movies library
