--- a/src/app/movie-and-tv-card/movie-and-tv-card.component.html
+++ b/src/app/movie-and-tv-card/movie-and-tv-card.component.html
@@ -55,7 +55,7 @@
   >
     <!-- Eye-slash icon: shows only if certification is adult-rated AND user is not isAdult -->
 
-    <div class="flip-card" [ngClass]="{}" (mouseover)="loadExtraData()">
+    <div class="flip-card" [ngClass]="{}" (mouseover)="apiCallCount===0 && loadExtraData()">
       <div
         class="flip-card-inner"
         [ngClass]="{
@@ -141,8 +141,8 @@
 
                 [style]="{
                   width: '100%',
-                  height: '170px',
-                  marginBottom: '1rem'
+                  height: '178px',
+                  marginBottom: '2rem'
                 }"
                 class="mb-2"
               >
@@ -155,6 +155,7 @@
 
           <div class="genres-container">
             <p-iconfield>
+              <div class="card-footer">
               <a *ngIf="movie.homepage" [href]="movie.homepage" target="_blank">
                 <i
                   class="pi pi-info-circle me-2"
@@ -163,7 +164,6 @@
                   style="
                     cursor: pointer;
                     font-size: 1.2rem;
-                    position: absolute;
                     left: 0;
                   "
                 ></i>
@@ -176,14 +176,15 @@
                 style="
                   cursor: pointer;
                   font-size: 1.2rem;
-                  position: absolute;
                   right: 0;
                 "
                 (click)="emitTrailer(movie.id)"
               ></i>
+              </div>
             </p-iconfield>
           </div>
         </div>
+        
       </div>
     </div>
   </div>
