Minor changes to a new page that is undone

--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -30,7 +30,7 @@
       </div>
       } @else {
       <a routerLink="/login"
-        ><p-button severity="help" styleClass="login-btn" class="login-btn"
+        ><p-button styleClass="login-btn" class="login-btn"
           >Login</p-button
         ></a
       >
