--- a/src/app/movie-and-tv-card/movie-and-tv-card.component.html
+++ b/src/app/movie-and-tv-card/movie-and-tv-card.component.html
@@ -127,7 +127,7 @@
             </span>
           </div>
           @if(askedToFetch && cast.length===0){
-          <i class="pi pi-spin pi-spinner" style="font-size: 2rem"></i>
+          <i class="pi pi-spin pi-spinner" style="font-size: 2rem; color: white !important;"></i>
 
           }
 
